--- a/css/styles.css
+++ b/css/styles.css
@@ -235,6 +235,7 @@ header li {
     height: 70px;
     border-radius: 50%;
     border: none;
+    margin-bottom: 400px;
     font-size: 40px;
     background-color: #ffa500;
     cursor: pointer;
@@ -250,4 +251,62 @@ header li {
 
 .fa-brands {
     color: #ffdddd;
+}
+
+/* ESTILO DA SECTION PORTFÓLIO */
+.portfolio {
+    padding: 30px 4%;
+    box-shadow: 0 0 40px 10px #ffa60094;
+}
+
+.img-port {
+    margin-top: 60px;
+    width: 360px;
+    height: 460px;
+    background-color: #ffa500;
+    background-size: cover;
+    background-position: 100% 0%;
+    transition: 7s;
+    cursor: pointer;
+    border-radius: 40px;
+    position: relative;
+}
+
+.img-port:hover {
+    background-position: 100% 100%;
+}
+
+.nome-projeto {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    font-size: 25px;
+    color: #050202;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.nome-projeto:hover {
+    opacity: 1;
+    background-color: #d7c6a757;
+    border-radius: 0;
+}
+
+#projeto-1 {
+    background-image: url("/img/teste.webp");
+}
+
+#projeto-2 {
+    background-image: url("/img/teste2.webp");
+}
+
+#projeto-3 {
+    background-image: url("/img/teste3.webp");
 }
