--- a/css/styles.css
+++ b/css/styles.css
@@ -421,10 +421,11 @@ footer {
         padding-top: 5px;
         max-width: 100%;
         overflow-x: hidden;
+        padding-bottom: 0.2rem;
     }
 
     .interface {
-        padding-top: 5px;
+        padding-top: 10px;
         max-width: 100%;
         justify-content: none;
     }
