--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #050202;
+    background-color: #000000;
     height: 100vh;
 }
 
@@ -49,7 +49,7 @@ body {
 
 header {
     padding: 40px 4%;
-    background-color: #050202;
+    background-color: #000000;
     position: fixed;
     width: 100%;
     z-index: 900;
@@ -144,10 +144,12 @@ header li {
 .foto-principal {
     position: relative;
     animation: animacao-foto 3s ease-in-out infinite alternate;
+    background-color: transparent;
 }
 
 .foto-principal img {
     width: 411px;
+    background-color: transparent;
 }
 
 
